读取数据的代码以及训练测试的相关代码

--- a/实验记录.markdown
+++ b/实验记录.markdown
@@ -90,9 +90,11 @@
 ## 结果
 ## 分析
 
-# 2023.3.1 
+# 2023.3.9 第十八次实验
 ## 对模型的修改:
-    调整了loss 重新跑第九次实验  
-
+    使用了bvh-converter这个库来解析bvh文件，并且得到了关节的3D位置坐标,使用正确的位姿进行训练 
+    另外，实验发现在训练时，解码时使用的第一个标签是ground-truth，z这应该是不正确的，因为在推理时没有ground-truth信息，应该用一个通用的普通位姿作为解码开始的信号，比如关节角度全为0的位姿？这个明天问一下师兄。
+## 结果：
+    loss下降到20左右，输出的人体位姿开始有意义，但是transformer输出的整体的动作序列还是不太会变化；左转和右转这些动作的位姿模型并没有学习到
 
    
