train on EgoMotion dataset

--- a/实验记录.markdown
+++ b/实验记录.markdown
@@ -97,4 +97,7 @@
 ## 结果：
     loss下降到20左右，输出的人体位姿开始有意义，但是transformer输出的整体的动作序列还是不太会变化；左转和右转这些动作的位姿模型并没有学习到
 
-   
+# 2023.3.13 第十九次实验
+## 对模型的修改：
+    使用我们自己的EgoMotion数据集进行训练和测试
+## 结果：
