增加了一些提高程序兼容性和可读性的代码

--- a/实验记录.markdown
+++ b/实验记录.markdown
@@ -101,3 +101,11 @@
 ## 对模型的修改：
     使用我们自己的EgoMotion数据集进行训练和测试
 ## 结果：
+    
+
+
+# 2023.3.13 第二十次实验
+## 对模型的修改：
+    加入positional embedding
+## 结果：
+    loss为22.79
