增加了绘制图像的代码

--- a/实验记录.markdown
+++ b/实验记录.markdown
@@ -101,7 +101,7 @@
 ## 对模型的修改：
     使用我们自己的EgoMotion数据集进行训练和测试
 ## 结果：
-    
+
 
 
 # 2023.3.13 第二十次实验
@@ -109,3 +109,11 @@
     加入positional embedding
 ## 结果：
     loss为22.79
+
+# 2023.3.15 第二十一次实验
+## 对模型的修改：
+    使用预训练的resnet101提取图像特征，而不再使用手工设计的特征
+    输入图像的大小与卷积网络也不同，由256->224
+    resnet101除了最后一个卷积层外，其余层参数都被冻结；最后一个线性层的输出改成了120
+## 结果：
+    
