在Egomotion上进行训练的代码

--- a/实验记录.markdown
+++ b/实验记录.markdown
@@ -16,4 +16,15 @@
 ### 模型修改：
     在EgoMotion数据集上进行训练和测试
 ### 实验结果：
+    loss达到20000？
+
+## 第二次实验
+### 模型修改：
+    实验一中的loss过大是因为计算loss的函数那里代码有错误，目前bug已修复
+    重新开始跑代码。
+### 实验结果：
+    loss:241
+    
+
+    
     
