loss改成了二范数

--- a/实验记录.markdown
+++ b/实验记录.markdown
@@ -101,7 +101,7 @@
 ## 对模型的修改：
     使用我们自己的EgoMotion数据集进行训练和测试
 ## 结果：
-
+    loss在25左右
 
 
 # 2023.3.13 第二十次实验
@@ -116,4 +116,10 @@
     输入图像的大小与卷积网络也不同，由256->224
     resnet101除了最后一个卷积层外，其余层参数都被冻结；最后一个线性层的输出改成了120
 ## 结果：
-    
+    loss大约在45左右
+
+# 2023.3.16 第二十二次实验
+## 对模型的修改：
+    loss由1-范数改为2-范数
+## 结果：
+    loss:2.338 最后结果还要看在metrics上的表现
